--- a/todoapp-backend/src/main/resources/application.properties
+++ b/todoapp-backend/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port = 8090
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/todoapp
 spring.datasource.username=root
-spring.datasource.password=akhil
+spring.datasource.password=dileep
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
